--- a/public/pages/favorite.html
+++ b/public/pages/favorite.html
@@ -1,5 +1,5 @@
 <div class="row center">
-    <img src="images/pic2.svg" alt="favorite-team-img" style="max-width: 100%; opacity: 0.7;">
+    <img src="images/pic2.svg" alt="favorite-team-img" style="width: 100%; opacity: 0.7;">
 </div>
 <div class="container">
     <div class="row center">
